// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TVPackagDetail card renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 8,
      },
      Object {
        "marginHorizontal": 15,
        "marginVertical": 15,
      },
    ]
  }
>
  <View
    elevation={2}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#B9C1C9",
          "borderRadius": 10,
          "borderWidth": 1,
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
  >
    <View
      style={undefined}
    >
      <View>
        <View
          style={Object {}}
        >
          <View
            style={
              Array [
                Object {
                  "borderTopLeftRadius": 10,
                  "borderTopRightRadius": 10,
                  "padding": 10,
                },
                Object {
                  "padding": 10,
                },
                Object {
                  "backgroundColor": "#E82E8A",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  Array [
                    false,
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#303C46",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "marginBottom": -5,
                        },
                        Object {},
                      ],
                      Object {
                        "fontFamily": "SukhumvitSet-Bold",
                      },
                    ]
                  }
                >
                  TrueVisions
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontFamily": "SukhumvitSet-Bold",
                      "fontSize": 22,
                      "marginBottom": -5,
                    }
                  }
                >
                  123444
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#E82E8A",
                "fontSize": 30,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 12,
                  "marginBottom": -12,
                },
                Object {
                  "marginBottom": -17,
                },
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingTop": 2,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#000000",
            "fontFamily": "SukhumvitSet-Bold",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Sport Family HD
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            HD Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              19
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              72
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TVPackagDetail card renders correctly when packageDetails is empty 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 8,
      },
      Object {
        "marginHorizontal": 15,
        "marginVertical": 15,
      },
    ]
  }
>
  <View
    elevation={2}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#B9C1C9",
          "borderRadius": 10,
          "borderWidth": 1,
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
  >
    <View
      style={undefined}
    >
      <View>
        <View
          style={Object {}}
        >
          <View
            style={
              Array [
                Object {
                  "borderTopLeftRadius": 10,
                  "borderTopRightRadius": 10,
                  "padding": 10,
                },
                Object {
                  "padding": 10,
                },
                Object {
                  "backgroundColor": "#E82E8A",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  Array [
                    false,
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#303C46",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "marginBottom": -5,
                        },
                        Object {},
                      ],
                      Object {
                        "fontFamily": "SukhumvitSet-Bold",
                      },
                    ]
                  }
                >
                  TrueVisions
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontFamily": "SukhumvitSet-Bold",
                      "fontSize": 22,
                      "marginBottom": -5,
                    }
                  }
                >
                  123444
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#E82E8A",
                "fontSize": 30,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 12,
                  "marginBottom": -12,
                },
                Object {
                  "marginBottom": -17,
                },
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingTop": 2,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#000000",
            "fontFamily": "SukhumvitSet-Bold",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Sport Family HD
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            HD Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              0
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              0
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TVPackagDetail card renders correctly when packageInfo is empty 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 8,
      },
      Object {
        "marginHorizontal": 15,
        "marginVertical": 15,
      },
    ]
  }
>
  <View
    elevation={2}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#B9C1C9",
          "borderRadius": 10,
          "borderWidth": 1,
          "shadowColor": "#303C46",
          "shadowOffset": Object {
            "height": 2,
            "width": 1,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 1,
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
  >
    <View
      style={undefined}
    >
      <View>
        <View
          style={Object {}}
        >
          <View
            style={
              Array [
                Object {
                  "borderTopLeftRadius": 10,
                  "borderTopRightRadius": 10,
                  "padding": 10,
                },
                Object {
                  "padding": 10,
                },
                Object {
                  "backgroundColor": "#E82E8A",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  Array [
                    false,
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#303C46",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "marginBottom": -5,
                        },
                        Object {},
                      ],
                      Object {
                        "fontFamily": "SukhumvitSet-Bold",
                      },
                    ]
                  }
                >
                  TrueVisions
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontFamily": "SukhumvitSet-Bold",
                      "fontSize": 22,
                      "marginBottom": -5,
                    }
                  }
                >
                  123444
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#E82E8A",
                "fontSize": 30,
              },
              Array [
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                },
                Object {
                  "bottom": 12,
                  "marginBottom": -12,
                },
                Object {
                  "marginBottom": -17,
                },
              ],
              Object {
                "fontFamily": "iservice",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
          "paddingTop": 2,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#000000",
            "fontFamily": "SukhumvitSet-Bold",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            HD Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              19
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#E9E9EA",
            "borderBottomWidth": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 57,
            "justifyContent": "space-between",
            "paddingHorizontal": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 30,
                },
                Object {
                  "color": "#68747E",
                  "paddingRight": 10,
                },
                Object {
                  "fontFamily": "iservice",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Bold",
                "fontSize": 18,
                "marginBottom": -4,
              }
            }
          >
            Channel
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#303C46",
                "fontFamily": "SukhumvitSet-Text",
                "textAlign": "right",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#303C46",
                  },
                  Array [
                    Object {
                      "fontSize": 22,
                    },
                    Object {},
                  ],
                  Object {
                    "fontFamily": "SukhumvitSet-SemiBold",
                  },
                ]
              }
            >
              72
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#303C46",
                },
                Array [
                  Object {
                    "color": "#68747E",
                    "fontSize": 14,
                    "marginTop": -10,
                    "textAlign": "right",
                  },
                  Object {},
                ],
                Object {
                  "fontFamily": "SukhumvitSet-SemiBold",
                },
              ]
            }
          >
            Channels
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
